Rdier Crud Endpoint
