# v1/controllers/riders/deleteRider.js
@@ -1,4 +1,5 @@
 const riderModel = require("../../models/rider-model");
+const { removeUser } = require("../businessLogic/users/remove-user");
 const { validateId } = require("../businessLogic/validObjectId");
 
 async function deleteRider(req,res)
@@ -7,18 +8,29 @@ async function deleteRider(req,res)
     const validId = validateId(rider_uuid);
     if(validId)
     {
-        const deleteRider = await riderModel.remove({_id: rider_uuid});
-        if(deleteRider)
+        const rider = await riderModel.findById(rider_uuid);
+        if(rider)
         {
-            const rider = await riderModel.findById(rider_uuid);
-            //remove user
-            await removeUser(rider.userId);
-
-            res.status(201).json({
-                status:201,
-                message: "Rider delete successfully !",
-                data: null
-            });
+            const deleteRider = await riderModel.deleteOne({_id: rider_uuid});
+            if(deleteRider)
+            {
+                //remove user
+                await removeUser(rider.userId);
+    
+                res.status(201).json({
+                    status:201,
+                    message: "Rider delete successfully !",
+                    data: null
+                });
+            }
+            else
+            {
+                res.status(401).json({
+                    status: 401,
+                    message: "Rider not found !",
+                    data: null
+                })
+            }
         }
         else
         {
